# prozes

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: lint.yml  release.yml  test.yml
prozes/: __init__.py  core.py
prozes/data/: presets.json
prozes/modules/: __init__.py  console.py  dirs.py  i18n.py  install.py  structures.py  templates.py  update_checker.py  validation.py  venv.py
